# SCIPhI

./: CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac
benchmark/: README  binarizeSciphiVCF.py  binarizeVCF.py  compare2GroundTruth.py  computePixelDistance.py  computeTreeDistance.py  computeTreeDistanceGT.py  createFalsePNCounts.py  createMonovarCluster.r  createMonovarCluster_withDen.r  createMpileup.py  createOverviewGraph.py  createOverviewGraph2.py  createPlots.R  createRecallVsPrecisionPlot.py  createSCIPhITreeHeatMap.R  createSimulationDataSets.snake  createSimulationDataSets_100_100.snake  createSimulationDataSets_10_10.snake  createSimulationDataSets_1_1.snake  createSimulationDataSets_2_2.snake  createSimulationDataSets_50_50.snake  distance.py  filterVCF.py  gatherBenchmarkResults.py  getMonovarFreqs.py  getSciphiFreqs.py  monovarToMap.py  plotCLAMs.R  plotCLBMs.R  plotCPNs.R  plotDropOuts.R  plotDropOutsWithVarScan.R  plotNumCells.R  plotNumCells_a_b.R  plotPriors.R  plotTreeDist.R  plotVios.R  run.sh  showNucleotideCounts.py  (+1 more)
benchmark/envs/: varscan2.yaml
real_data/SRA053195/analysis/: README  SRA053195.snake  config.json  run.sh  sample_mapping.txt
real_data/SRA053195/data/: SRA053195.txt  prepare_data.snake  run.sh  srr2sample.map
real_data/SRP044380/analysis/: SRP044380.snake  config.json  panel_regions.bed  panel_to_exclude.vcf  run.sh  sample_mapping.txt
real_data/SRP044380/data/: SRP044380.txt  prepare_data.snake  srr2sample.map
real_data/SRP046355/analysis/: README  SRP046355.snake  compareCellLine.py  config.json  parse.pl  run.sh  sample_mapping.txt
real_data/SRP046355/data/: SRP046355.txt  prepare_data.snake  run.sh
real_data/data/: data.snake
real_data/data/envs/: bwa.yaml  sra.yaml
real_data/ovarian_cancer/: config.json  createMpileup.py  ovarian.snake
real_data/ovarian_cancer/patient9/: getSup.py  pat9.snake  run.sh  sample_mapping.txt
real_data/pipe/: align_snake.py  misc_snake.py  monovar_snake.py  prep_data_snake.py  qc_snake.py  var_exome_snake.py
real_data/pipe/envs/: bwa.yaml  gatk.yaml  multiqc.yaml  picard.yaml  qualimap.yaml  samtools.yaml
real_data/pipe/envs/GATK/conda-meta/: history
src/: attachmentScores.h  convertTreeIntoClusterMap.cpp  createSingleCellSeqTree.cpp  findBestTrees.cpp  logScores.h  mcmc.h  noise_counts.h  output.h  probabilities.h  rand.h  readData.h  sciphi_config.h  scoreTree.h  trees.h  version.h
test/: sciphi_test.cpp
